...

  @override
  Widget build(BuildContext context) {
    return Row(
      children: [
        Switch(
          key: const Key('fixedSwitch'),
          value: marketRate,
          onChanged: (bool value) {
            setState(() {
              marketRate = value;
            });
            widget.onChanged(value);
...
